--- a/dz/style.css
+++ b/dz/style.css
@@ -15,7 +15,7 @@
     margin: 0;
     padding: 0;
 }
-header, .container_project, .blog_container, footer {
+.container_nav, .container_baner, .container_project, .blog_container, .container_latest_post, footer {
     margin: 0 auto;
     max-width: 1200px;
 }
@@ -216,7 +216,35 @@ a {
     column-gap: 17px;
     margin-top: 52px;
 }
+.img_blog {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+.img_blog img {
+    position: absolute;
+    width: 100%;
+    height: 240px;
+    z-index: 0;
+}
+.img_blog_text {
+    position: absolute;
+    z-index: 1;
+    background-color: #fff;
+    top: 185px;
+    left: 20px;
+    font-family: Jost-Regular;
+    font-size: 16px;
+    font-weight: 400;
+    color: #4D5053;
+    border-radius: 8px 8px 8px 0;
+    padding: 5px;
+    width: 137px;
+    text-align: center;
+}
 .blog_item {
+    height: 490px;
     padding: 21px;
     border: 1px solid #F4F0EC;
     border-radius: 68px;
@@ -227,7 +255,7 @@ a {
     flex-direction: column;
     text-align: center;
     align-items: left;
-    margin-top: 21px;
+    margin-top: 315px;
 }
 .sub_blog_left h3 {
     font-family: DM-serif;
@@ -269,8 +297,10 @@ a {
 }
 .container_footer {
     display: flex;
-   justify-content: space-between;
-   margin-top: 33px;
+    justify-content: space-between;
+    margin-top: 33px;
+    height: 302px;
+
 }
 .logo_footer {
     display: flex;
@@ -321,9 +351,253 @@ a {
     float: right;
 }
 
-
-
-
-.footer_block {
-    height: 302px;
+/* blog.html */
+.container_baner_blog {
+    position: relative;
 }
+.backgroud_container {
+    background-image: url(./img/header_foto_blog.png);
+    width: 100%;
+    height: 356px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.title_baner_blog_container {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    position: absolute;
+    width: 503px;
+    height: 274px;
+    top: 50%;
+    left: 34%;
+    border-radius: 37px 37px 0 0;
+}
+.title_baner_blog {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 347px;
+    height: 192px;
+    margin-top: 41px;
+}
+.title_baner_blog h2 {
+    font-family: DM-serif;
+    font-size: 50px;
+    font-weight: 400;
+    width: 195px;
+}
+.title_baner_blog p {
+    text-align: center;
+    font-family: Jost-Regular;
+    font-size: 22px;
+    font-weight: 400;
+    width: 134px;
+    margin-left: 75px;
+}
+.container_latest_post {
+    margin-top: 200px;
+    h2 {
+        font-family: DM-serif;
+        font-size: 50px;
+        font-weight: 400;
+        color: #292F36;
+    }
+}
+.latest_post_block {
+    display: flex;
+    border: 1px solid rgb(231, 231, 231);
+    border-radius: 68px;
+    margin-top: 27px;
+    padding: 22px;
+    .img_latest_post_left {
+        max-width: 569px;
+    }
+    img {
+        width: 100%;
+        margin: 31px 0 31px 0;
+    }
+}
+.content_latest_post_right_up {
+    max-width: 469px;
+    margin-left: 60px;
+    margin-top: 0;
+    h2 {
+        font-family: DM-serif;
+        font-size: 25px;
+        font-weight: 400;
+        color: #292F36;
+    }
+    p {
+        font-family: Jost-Regular;
+        font-size: 22px;
+        font-weight: 400;
+        color: #4D5053;
+    }
+}
+.content_latest_post_right_down {
+    margin-top: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    span {
+        font-family: Jost-Regular;
+        font-size: 16px;
+        font-weight: 400;
+        color: #4D5053;
+    }
+    a {
+        display: block;
+        background-color: #F4F0EC;
+        background-image: url(/dz/img/go.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+    }
+}
+.content_blog_news {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-top: 96px;
+}
+.content_blog_news h2 {
+    font-family: DM-serif;
+    font-size: 50px;
+    font-weight: 400;
+    color: #292F36;
+    height: 126px;
+    max-width: 362px;
+}
+.content_blog_news p {
+    font-family: Jost-Regular;
+    font-size: 22px;
+    font-weight: 400;
+    color: #4D5053;
+    height: 66px;
+    max-width: 475px;
+    margin-top: 12px;
+}
+.blog_list_news {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 17px;
+    margin-top: 22px;
+    margin-bottom: 200px;
+}
+.img_blog_news {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+.img_blog_news img {
+    position: absolute;
+    width: 100%;
+    height: 240px;
+    z-index: 0;
+}
+.img_blog_text_news {
+    position: absolute;
+    z-index: 1;
+    background-color: #fff;
+    top: 185px;
+    left: 20px;
+    font-family: Jost-Regular;
+    font-size: 16px;
+    font-weight: 400;
+    color: #4D5053;
+    border-radius: 8px 8px 8px 0;
+    padding: 5px;
+    width: 137px;
+    text-align: center;
+}
+.blog_item_news {
+    height: 490px;
+    margin: 30px;
+    padding: 21px;
+    border: 1px solid #F4F0EC;
+    border-radius: 68px;
+    
+}
+.sub_content_blog_news {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: left;
+    margin-top: 315px;
+}
+.sub_blog_left_news h3 {
+    font-family: DM-serif;
+    font-size: 25px;
+    font-weight: 400;
+    color: #292F36;
+    max-width: 305px;
+    text-align: left;
+}
+.sub_blog_right_news {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 17px;
+}
+.sub_blog_right_news span {
+    font-family: Jost-Regular;
+    font-size: 16px;
+    font-weight: 400;
+    color: #4D5053;
+}
+.sub_blog_right_news a {
+    display: block;
+    background-color: #F4F0EC;
+    background-image: url(/dz/img/go.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.blog_item_news:hover {
+    background-color: #F4F0EC;
+}
+.blog_item_news:hover a {
+    background-color: #ffffff;
+}
+.page_block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 50px;
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Jost-semibold;
+        font-size: 16px;
+        font-weight: 500;
+        width: 52px;
+        height: 52px;
+        color: rgb(41, 47, 54);
+        border: 1px solid rgb(205, 162, 116);
+        border-radius: 50%;
+    }
+    a:last-child {
+        background-image: url(./img/go.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 7px;
+    }
+    .active {
+        background-color: rgb(244, 240, 236);
+        border: none;
+    }
+   
+}
+
